feat: adding the icons and refactioing the layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://2022.pythonbrasil.org.br/">
+    <meta property="og:url" content="https://2023.pythonbrasil.org.br/">
     <meta property="og:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
     <meta property="og:description"
         content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
@@ -27,7 +27,7 @@
 
     <!-- Twitter Meta Tags -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://2022.pythonbrasil.org.br/">
+    <meta property="twitter:url" content="https://2023.pythonbrasil.org.br/">
     <meta property="twitter:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
     <meta property="twitter:description"
         content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
@@ -57,7 +57,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Rowdies:wght@300;400&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="css/main.min.css?v=1.3">
+    <link rel="stylesheet" href="css/main.css">
 
     <script>console.log("\nPython Nordeste 2022\n\nPessoas > Tecnologia\n✊🏿✊🏾✊🏽✊✊🏼✊🏻 🏳️‍🌈🏳️‍⚧️♿\n ")</script>
 
@@ -74,66 +74,42 @@
 <body class="">
 
     <main>
-        <header class="">
-            <div id="hero-section" role="img"
-                aria-label="Cobra python azul enrolada em um caju amarelo e verde e animações com os textos Aracaju, Sergipe e 26, 27 e 28 Agosto">
-            </div>
+        <header class="main">
+            <img class="main-hero" src="./img/assets/FITINHAS VOANDO.svg" aria-label="Fitas voando">
+            </img>
+            <img class="main-logo" src="./img/assets/LOGO.svg" alt="">
         </header>
-        <section id="intro">
+        <section class="intro" id="intro">
             <div class="descricao pd-section">
-                <h1>
-                    <span class="verde">Da comunidade,</span><br />
-                    <span class="vermelho">para a comunidade.</span>
-                </h1>
-                <p>
-                    A Python Nordeste 2022 nasceu com a tarefa de promover o máximo de diversidade e inclusão durante os
-                    três dias do evento.
-                </p>
-                <p>
-                    Nossa organização, durante todo o processo de criação do evento (desde a escolha da equipe
-                    organizadora, definição do local, esquema de palestras, convites de keynotes) se preocupou ao máximo
-                    com a entrega de uma PyNE onde realmente fosse possível promover a conexão entre pessoas muito além
-                    da entrega de conhecimentos em tecnologia.
-                </p>
-                <p>
-                    Temos muito orgulho em dizer a todas as pessoas que a PyNE22 é uma edição <b class="rainbow-text">da
-                        comunidade, para a comunidade</b>, pois, somos uma edição 100% pautada em pluralidade,
-                    diversidade, respeito e inclusão.
-                </p>
-                <p>
-                    Será um imenso prazer fazermos parte deste evento e dividir um pouco da nossa pluralidade. Esperamos
-                    todes vocês por aqui!
-                </p>
+                <h2>
+                    <span class="intro-heading">Setembro de 2023 <br />#pyne2023barrildobrado</span>
+                </h2>
+
             </div>
         </section>
 
-        <div class="coluna social-media">
+        <div class="social-media">
             <h3 class="branco text-center">
                 Siga-nos nas nossas redes:
             </h3>
-            <div class="text-center icones">
-                <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
-                    <img class="lazy-loading" data-src="img/insta.svg" alt="Instagram">
-                </a>
-                <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
-                    <img class="lazy-loading" data-src="img/twitter.svg" alt="Twitter">
-                </a>
-            </div>
-            <div class="text-center icone">
-                <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
-                    rel="noopener noreferrer">
-                    <img class="lazy-loading" data-src="img/linkedin.svg" alt="Linkedin">
-                </a>
-            </div>
-            <div class="text-center copyright">
-                <small class="cinza">
-                    PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro
-                </small>
-            </div>
+            <ul class="social-media--icons">
+                <li> <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
+                        nordeste@python.org.br<img class="lazy-loading" src="./img/icons/EMAIL.svg" alt="Instagram">
+                    </a></li>
+                <li> <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
+                        @pythonnordeste<img class="lazy-loading" src="./img/icons/instagram.svg" alt="Instagram">
+                    </a></li>
+                <li> <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
+                        @pythonnordeste <img class="lazy-loading" src="./img/icons/twitter.svg" alt="Twitter">
+                    </a></li>
+                <li><a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
+                        rel="noopener noreferrer">
+                        /PythonNordeste <img class="lazy-loading" src="./img/icons/SITE_1.svg" alt="Twitter">
+                    </a></li>
+            </ul>
+
+
         </div>
-        </div>
-        </div>
-        </footer>
     </main>
 
 </body>
