chore: importing the fonts and adjusting the social media layout

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 
     <!-- Primary Meta Tags -->
     <title>PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro</title>
+
     <meta name="title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
     <meta name="description"
         content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
+    <!-- Importing Google Fonts -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@200;500;900&family=Work+Sans:ital,wght@0,100;0,500;0,700;0,800;1,300&display=swap"
+        rel="stylesheet">
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
@@ -94,18 +102,18 @@
             </h3>
             <ul class="social-media--icons">
                 <li> <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
-                        nordeste@python.org.br<img class="lazy-loading" src="./img/icons/EMAIL.svg" alt="Instagram">
-                    </a></li>
+                        <img class="lazy-loading" src="./img/icons/EMAIL.svg" alt="Instagram">
+                    </a> nordeste@python.org.br</li>
                 <li> <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
-                        @pythonnordeste<img class="lazy-loading" src="./img/icons/instagram.svg" alt="Instagram">
-                    </a></li>
+                        e<img class="lazy-loading" src="./img/icons/instagram.svg" alt="Instagram">
+                    </a>@pythonnordest</li>
                 <li> <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
-                        @pythonnordeste <img class="lazy-loading" src="./img/icons/twitter.svg" alt="Twitter">
-                    </a></li>
+                        <img class="lazy-loading" src="./img/icons/twitter.svg" alt="Twitter">
+                    </a>@pythonnordeste </li>
                 <li><a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
                         rel="noopener noreferrer">
-                        /PythonNordeste <img class="lazy-loading" src="./img/icons/SITE_1.svg" alt="Twitter">
-                    </a></li>
+                        <img class="lazy-loading" src="./img/icons/SITE_1.svg" alt="Twitter">
+                    </a> /PythonNordeste</li>
             </ul>
 
 
