fix: adjusting the layout structure

--- a/index.html
+++ b/index.html
@@ -73,60 +73,52 @@
     </script>
 </head>
 
-<body class="">
+<body>
 
     <main>
         <header class="main">
             <img class="main-hero" src="./img/assets/FITINHAS VOANDO.svg"
                 aria-label="Fitas voando escrito Python Nordeste 2023">
             </img>
+
             <img class="main-logo" src="./img/assets/LOGO.svg" alt="">
         </header>
-
-        <section id="intro">
-            <div class="intro--descricao">
-                <p class="intro--descricao-callout">VEM AÍ!!! Python Nordeste 2023 vai ser barril dobrado!</p>
-                <p>
-                    Nossa organização, durante todo o processo de criação do evento (desde a escolha da equipe
-                    organizadora, definição do local, esquema de palestras, convites de keynotes) se preocupou ao máximo
-                    com a entrega de uma PyNE onde realmente fosse possível promover a conexão entre pessoas muito além
-                    da entrega de conhecimentos em tecnologia.
-                </p>
-                <p>
-                    Será um imenso prazer fazermos parte deste evento e dividir um pouco da nossa pluralidade. Esperamos
-                    todes vocês por aqui!
-                </p>
-            </div>
-        </section>
-
-        <div class="social-media">
-            <ul>
-                <h3 class="social-media--text-center">
-                    Siga-nos nas nossas redes:
-                </h3>
-                <li> <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Instagram">
-                        nordeste@python.org.br
-                    </a></li>
-                <li> <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram">@pythonnordeste
-                    </a></li>
-                <li> <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter">@pythonnordeste
-                    </a> </li>
-                <li><a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
-                        rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/SITE_1.svg" alt="Linkedin">/PythonNordeste
-                    </a></li>
-            </ul>
-        </div>
-
-        <footer class="footer">
-            <small class="cinza">
-                PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro
-            </small>
-        </footer>
     </main>
+
+    <section class="intro" id="intro">
+        <div class="intro--descricao">
+            <p class="intro--descricao-callout">Python Nordeste 2023 vai ser barril dobrado!</p>
+        </div>
+    </section>
+
+    <div class="social-media">
+        <h3 class="social-media--text-center">
+            Siga-nos nas nossas redes:
+        </h3>
+        <ul>
+            <li> <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
+                    <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email">
+                    nordeste@python.org.br
+                </a></li>
+            <li> <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
+                    <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram">@pythonnordeste
+                </a></li>
+            <li> <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
+                    <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter">@pythonnordeste
+                </a> </li>
+            <li><a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img class="social-media--icons" src="./img/icons/SITE_1.svg" alt="Linkedin">/PythonNordeste
+                </a></li>
+        </ul>
+    </div>
+
+    <footer class="footer">
+        <small class="footer--note">
+            PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro
+        </small>
+    </footer>
 </body>
+
 
 </html>
