--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
 <html lang="pt-BR">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="./css/main.css">
+    <!-- Fonts / Styles -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@200;500;900&display=swap"
+        rel="stylesheet">
     <!-- Primary Meta Tags -->
     <title>PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro</title>
     <meta name="title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
@@ -19,7 +29,7 @@
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://2022.pythonbrasil.org.br/">
+    <meta property="og:url" content="https://2023.pythonbrasil.org.br/">
     <meta property="og:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
     <meta property="og:description"
         content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
@@ -27,7 +37,7 @@
 
     <!-- Twitter Meta Tags -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://2022.pythonbrasil.org.br/">
+    <meta property="twitter:url" content="https://2023.pythonbrasil.org.br/">
     <meta property="twitter:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
     <meta property="twitter:description"
         content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
@@ -51,15 +61,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#D70800">
 
-    <!-- Fonts / Styles -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Rowdies:wght@300;400&display=swap"
-        rel="stylesheet">
-
-    <link rel="stylesheet" href="css/main.min.css?v=1.3">
-
-    <script>console.log("\nPython Nordeste 2022\n\nPessoas > Tecnologia\n✊🏿✊🏾✊🏽✊✊🏼✊🏻 🏳️‍🌈🏳️‍⚧️♿\n ")</script>
+    <script>console.log("\nPython Nordeste 2023\n\nPessoas > Tecnologia\n✊🏿✊🏾✊🏽✊✊🏼✊🏻 🏳️‍🌈🏳️‍⚧️♿\n ")</script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-L0X42JQJ9N"></script>
@@ -71,71 +73,52 @@
     </script>
 </head>
 
-<body class="">
+<body>
 
     <main>
-        <header class="">
-            <div id="hero-section" role="img"
-                aria-label="Cobra python azul enrolada em um caju amarelo e verde e animações com os textos Aracaju, Sergipe e 26, 27 e 28 Agosto">
-            </div>
-        </header>
-        <section id="intro">
-            <div class="descricao pd-section">
-                <h1>
-                    <span class="verde">Da comunidade,</span><br />
-                    <span class="vermelho">para a comunidade.</span>
-                </h1>
-                <p>
-                    A Python Nordeste 2022 nasceu com a tarefa de promover o máximo de diversidade e inclusão durante os
-                    três dias do evento.
-                </p>
-                <p>
-                    Nossa organização, durante todo o processo de criação do evento (desde a escolha da equipe
-                    organizadora, definição do local, esquema de palestras, convites de keynotes) se preocupou ao máximo
-                    com a entrega de uma PyNE onde realmente fosse possível promover a conexão entre pessoas muito além
-                    da entrega de conhecimentos em tecnologia.
-                </p>
-                <p>
-                    Temos muito orgulho em dizer a todas as pessoas que a PyNE22 é uma edição <b class="rainbow-text">da
-                        comunidade, para a comunidade</b>, pois, somos uma edição 100% pautada em pluralidade,
-                    diversidade, respeito e inclusão.
-                </p>
-                <p>
-                    Será um imenso prazer fazermos parte deste evento e dividir um pouco da nossa pluralidade. Esperamos
-                    todes vocês por aqui!
-                </p>
-            </div>
-        </section>
+        <header class="main">
+            <img class="main-hero" src="./img/assets/FITINHAS VOANDO.svg"
+                aria-label="Fitas voando escrito Python Nordeste 2023">
+            </img>
 
-        <div class="coluna social-media">
-            <h3 class="branco text-center">
-                Siga-nos nas nossas redes:
-            </h3>
-            <div class="text-center icones">
-                <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
-                    <img class="lazy-loading" data-src="img/insta.svg" alt="Instagram">
-                </a>
-                <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
-                    <img class="lazy-loading" data-src="img/twitter.svg" alt="Twitter">
-                </a>
-            </div>
-            <div class="text-center icone">
-                <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
-                    rel="noopener noreferrer">
-                    <img class="lazy-loading" data-src="img/linkedin.svg" alt="Linkedin">
-                </a>
-            </div>
-            <div class="text-center copyright">
-                <small class="cinza">
-                    PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro
-                </small>
-            </div>
-        </div>
-        </div>
-        </div>
-        </footer>
+            <img class="main-logo" src="./img/assets/LOGO.svg" alt="">
+        </header>
     </main>
 
+    <section class="intro" id="intro">
+        <div class="intro--descricao">
+            <p class="intro--descricao-callout">Python Nordeste 2023 vai ser barril dobrado!</p>
+        </div>
+    </section>
+
+    <div class="social-media">
+        <h3 class="social-media--text-center">
+            Siga-nos nas nossas redes:
+        </h3>
+        <ul>
+            <li> <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
+                    <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email">
+                    nordeste@python.org.br
+                </a></li>
+            <li> <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
+                    <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram">@pythonnordeste
+                </a></li>
+            <li> <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
+                    <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter">@pythonnordeste
+                </a> </li>
+            <li><a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img class="social-media--icons" src="./img/icons/SITE_1.svg" alt="Linkedin">/PythonNordeste
+                </a></li>
+        </ul>
+    </div>
+
+    <footer class="footer">
+        <small class="footer--note">
+            PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro
+        </small>
+    </footer>
 </body>
+
 
 </html>
