chore: adding the Linkedin icon

--- a/index.html
+++ b/index.html
@@ -77,11 +77,9 @@
 
     <main>
         <header class="main">
-            <img class="main-hero" src="./img/assets/FITINHAS VOANDO.svg"
+            <img class="main-hero" src="./img/assets/FITINHAS_VOANDO.png"
                 aria-label="Fitas voando escrito Python Nordeste 2023">
-            </img>
-
-            <img class="main-logo" src="./img/assets/LOGO.svg" alt="">
+            <img class="main-logo" src="./img/assets/LOGO.png" alt="">
         </header>
     </main>
 
@@ -108,7 +106,7 @@
                 </a> </li>
             <li><a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
                     rel="noopener noreferrer">
-                    <img class="social-media--icons" src="./img/icons/SITE_1.svg" alt="Linkedin">/PythonNordeste
+                    <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin">/PythonNordeste
                 </a></li>
         </ul>
     </div>
@@ -119,6 +117,5 @@
         </small>
     </footer>
 </body>
-
 
 </html>
