--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     Pessoas > Tecnologia
     ✊🏿✊🏾✊🏽✊✊🏼✊🏻 🏳️‍🌈🏳️‍⚧️♿
 -->
-<html lang="pt-BR">
+<html lang="pt-BR" xmlns="http://www.w3.org/1999/html">
 
 <head>
 
@@ -64,26 +64,59 @@
 
 <body>
 
-    <main>
+<div  class="navbar">
+         <button><a id="logo" class="nav-link" href="#">Home</a></button>
+         <button><a class="nav-link" href="#intro">Sobre a cidade</a></button>
+         <button><a class="nav-link" href="#patrocinio">Como patrocinar</a></button>
+         <button><a class="nav-link" href="#social-media">Redes sociais</a></button>
+</div>
+
         <header class="main">
             <img class="main-hero" src="./img/assets/FITINHAS_VOANDO.png"
                 aria-label="Fitas voando escrito Python Nordeste 2023">
             <img class="main-logo" src="./img/assets/LOGO.png" alt="">
         </header>
-    </main>
 
+
+            <h1 class="intro--descricao-callout">Python Nordeste 2023 vai ser barril dobrado!</h1>
     <section class="intro" id="intro">
         <div class="intro--descricao">
-            <p class="intro--descricao-callout">Python Nordeste 2023 vai ser barril dobrado!</p>
+            <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
+            <section class="intro-cidade">
+            <p>A PyNE este ano será sediada em Salvador - Bahia , capital e maior cidade da Bahia.
+                </hr>
+                A sua história está vinculada à chegada dos portugueses na costa brasileira, mais especificamente na região da Baía de Todos os Santos foi a primeira capital do Brasil
+</p>
+            <p>
+Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas paisagens geográficas, e se beneficia de características muito específicas. Tem um clima quente e ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da Barra, Amaralina, e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra, como a rica e saborosa culinária, música e ritmos revolucionários, sincretismo religioso, terreiros de candomblé e exibições de capoeira - tudo relacionado com o respeito, preservação e reverência à ancestralidade de seu povo!
+</p>
+            <p>
+Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas importantes, sendo conhecida, por exemplo, pelos festejos de Senhor do Bonfim, Iemanjá, Carnaval e Ano-Novo. </br>
+</p> <p>
+Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento da industrialização e tecnologia nomeada como uma das cidades inteligentes do nordeste por atividades do dia a colocou no primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas e inteligentes do país.
+</p></section>
+
         </div>
     </section>
+<div class="patrocinio" id="patrocinio">
+    <section class="patrocinio-texto">
+    <h2>Seja uma patrocinadora da Python Nordeste</h2>
+    <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
 
-    <div class="social-media">
+    </section>
+
+
+    <button>
+            <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link">Baixar o PDF</a>
+    </button>
+
+</div>
+    <div class="social-media" id="social-media">
         <h3 class="social-media--text-center">
             Siga-nos nas nossas redes:
         </h3>
         <ul>
-            <li> <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
+            <li><a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
                     <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email">
                     nordeste@python.org.br
                 </a></li>
