adicionado link para o cdc

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
          <button><a id="logo" class="nav-link" href="#">Home</a></button>
          <button><a class="nav-link" href="#intro">Sobre a cidade</a></button>
          <button><a class="nav-link" href="#patrocinio">Como patrocinar</a></button>
+         <button><a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a></button>
          <button><a class="nav-link" href="#social-media">Redes sociais</a></button>
 </div>
 
@@ -84,7 +85,6 @@
             <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
             <section class="intro-cidade">
             <p>A PyNE este ano será sediada em Salvador - Bahia , capital e maior cidade da Bahia.
-                </hr>
                 A sua história está vinculada à chegada dos portugueses na costa brasileira, mais especificamente na região da Baía de Todos os Santos foi a primeira capital do Brasil
 </p>
             <p>
