--- a/index.html
+++ b/index.html
@@ -131,6 +131,24 @@
         </button>
 
     </div>
+
+    <div class="localizacao">
+        <section class="localizacao--texto">
+            <h2>Confira o local do evento</h2>
+            <p>A PyNE 2023 será sediada na Politécnica da UFBA - Salvador</p> <br>
+            <p>R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630</p>
+        </section>
+
+        <div class="mapouter">
+            <div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0"
+                    marginwidth="0"
+                    src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+            </div>
+            <style></style>
+        </div>
+    </div>
+
+
     <div class="social-media" id="social-media">
         <h3 class="social-media--text-center">
             Siga-nos nas nossas redes:
