#11 - Alterar texto do site - Descrição da cidade
De acordo com a Issue #10

--- a/index.html
+++ b/index.html
@@ -84,17 +84,14 @@
         <div class="intro--descricao">
             <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
             <section class="intro-cidade">
-            <p>A PyNE este ano será sediada em Salvador - Bahia , capital e maior cidade da Bahia.
-                A sua história está vinculada à chegada dos portugueses na costa brasileira, mais especificamente na região da Baía de Todos os Santos foi a primeira capital do Brasil
-</p>
-            <p>
-Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas paisagens geográficas, e se beneficia de características muito específicas. Tem um clima quente e ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da Barra, Amaralina, e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra, como a rica e saborosa culinária, música e ritmos revolucionários, sincretismo religioso, terreiros de candomblé e exibições de capoeira - tudo relacionado com o respeito, preservação e reverência à ancestralidade de seu povo!
-</p>
-            <p>
-Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas importantes, sendo conhecida, por exemplo, pelos festejos de Senhor do Bonfim, Iemanjá, Carnaval e Ano-Novo. </br>
-</p> <p>
-Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento da industrialização e tecnologia nomeada como uma das cidades inteligentes do nordeste por atividades do dia a colocou no primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas e inteligentes do país.
-</p></section>
+            <p>A PyNE este ano será sediada em Salvador - Bahia , capital e maior cidade da Bahia. A sua história está vinculada à chegada dos portugueses na costa brasileira, mais especificamente na região da Baía de Todos os Santos foi a primeira capital do Brasil</p>
+
+<p>Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas paisagens geográficas, e se beneficia de características muito específicas. Tem um clima quente e ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da Barra, Amaralina, e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra, como a rica e saborosa culinária, música e ritmos revolucionários, sincretismo religioso, terreiros de candomblé e exibições de capoeira - tudo relacionado com o respeito, preservação e reverência à ancestralidade de seu povo!</p>
+
+<p>Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas importantes, sendo conhecida, por exemplo, pelos festejos de Senhor do Bonfim, Iemanjá, Carnaval e Ano-Novo.</p>
+
+<p>Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento da industrialização e tecnologia nomeada como uma das cidades inteligentes do nordeste por atividades do dia a colocou no primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas e inteligentes do país.</p>
+            </section>
 
         </div>
     </section>
