fix: section intro texto 1p

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         <div class="intro--descricao">
             <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
             <section class="intro-cidade">
-                <p>A PyNE este ano será sediada em Salvador - Bahia , capital e maior cidade da Bahia.
+                <p>A PyNE este ano será sediada na cidade de Salvador, primeira capital do Brasil e maior cidade da Bahia, 
+                    considerada o centro da cultura afro-brasileira no Brasil.
                     </hr>
                     A sua história está vinculada à chegada dos portugueses na costa brasileira, mais especificamente na
                     região da Baía de Todos os Santos foi a primeira capital do Brasil
