fix: atualizando descrição da cidade

--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
         <div class="intro--descricao">
             <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
             <section class="intro-cidade">
-                <p>A PyNE este ano será sediada em Salvador - Bahia , capital e maior cidade da Bahia.
+                <p class="intro-cidade--callout">A PyNE este ano será sediada em Salvador, capital e maior
+                    cidade da Bahia.
                     </hr>
-                    A sua história está vinculada à chegada dos portugueses na costa brasileira, mais especificamente na
-                    região da Baía de Todos os Santos foi a primeira capital do Brasil
                 </p>
                 <p>
                     Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas
@@ -105,15 +104,14 @@
                 <p>
                     Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um
                     pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas
-                    importantes, sendo conhecida, por exemplo, pelos festejos de Senhor do Bonfim, Iemanjá, Carnaval e
-                    Ano-Novo. </br>
+                    importantes, sendo conhecida, pelos festejos do Senhor do Bonfim, Iemanjá, Carnaval e Ano Novo.
+                    </br>
                 </p>
                 <p>
                     Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento
-                    da industrialização e tecnologia nomeada como uma das cidades inteligentes do nordeste por
-                    atividades do dia a colocou no primeiro lugar do Nordeste no Ranking Connected Smart Cities, que
-                    aponta as cidades mais conectadas e inteligentes do país.
-                </p>
+                    da industrialização e tecnologia nomeada como uma das cidades inteligentes do Nordeste. Ficou em
+                    primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas
+                    e inteligentes do País.
             </section>
 
         </div>
