fix: add pp em ingles e minor fixes em localizacao

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <button><a class="nav-link" href="#patrocinio">Como patrocinar</a></button>
         <button><a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a></button>
         <button><a class="nav-link" href="#social-media">Redes sociais</a></button>
+        <button><a class="nav-link" href="#orientações">Orientações para a Covid-19</a></button>
     </div>
 
     <header class="main">
@@ -118,35 +119,46 @@
 
         </div>
     </section>
-    <div class="patrocinio" id="patrocinio">
-        <section class="patrocinio-texto">
-            <h2>Seja uma patrocinadora da Python Nordeste</h2>
-            <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
+    <div class="sponsor">
 
-        </section>
+        <h2>Seja uma patrocinadora da Python Nordeste</h2>
+        <div class="patrocinio--section" id="patrocinio">
+            <section lang="pt-br" class="patrocinio-texto">
+                <h3>Junte-se a nós para construir este evento!</h3>
+                <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
 
 
-        <button>
-            <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link">Baixar o
-                PDF</a>
-        </button>
+                <button>
+                    <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link">Baixar
+                        o
+                        PDF</a>
+                </button>
+            </section>
+            <section lang="en-us" class="patrocinio-texto">
+                <h3>Become a sponsor of Python Nordeste</h3>
+                <p>Check out our Sponsorship Plan!</p>
 
+                <button>
+                    <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view">Download PDF file
+                    </a>
+                </button>
+            </section>
+
+        </div>
     </div>
 
     <div class="localizacao">
         <section class="localizacao--texto">
             <h2>Confira o local do evento</h2>
-            <p>A PyNE 2023 será sediada na Politécnica da UFBA - Salvador</p> <br>
+            <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) - Salvador</p>
+            <br>
             <p>R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630</p>
         </section>
 
-        <div class="mapouter">
-            <div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0"
-                    marginwidth="0"
-                    src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-            </div>
-            <style></style>
-        </div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.56535363496!2d-38.512876424041686!3d-12.999628560375259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049dd45f3533%3A0x6e449a7096d9e5e0!2sEscola%20Polit%C3%A9cnica%20da%20UFBA!5e0!3m2!1spt-BR!2sbr!4v1685062528945!5m2!1spt-BR!2sbr"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
 
