--- a/orientacoes.html
+++ b/orientacoes.html
@@ -85,81 +85,30 @@
     </header>
 
 
-    <section class="intro" id="intro">
+    <section class="intro orientacoes" id="intro">
         <div class="intro--descricao">
-            <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
+            <section class="intro--orientacoes">
+
+                <img src="./img/icons/HEALTH.png">
+                <h2>Orientações sobre a Covid-19</h2>
+            </section>
             <section class="intro-cidade">
-                <p>A PyNE este ano será sediada em Salvador - Bahia , capital e maior cidade da Bahia.
-                    </hr>
-                    A sua história está vinculada à chegada dos portugueses na costa brasileira, mais especificamente na
-                    região da Baía de Todos os Santos foi a primeira capital do Brasil
+                <p>
+                    Será obrigatória a apresentação do comprovante de vacinação, e todas as pessoas participantes,
+                    organização, palestrantes e pessoas membras do CdC. Procuramos priorizar os cuidados com a saúde
+                    seguindo as orientações e diretrizes da Organização Mundial da Saúde e das autoridades locais
+                    competentes.
                 </p>
                 <p>
-                    Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas
-                    paisagens geográficas, e se beneficia de características muito específicas. Tem um clima quente e
-                    ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da Barra, Amaralina,
-                    e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra, como a rica e saborosa
-                    culinária, música e ritmos revolucionários, sincretismo religioso, terreiros de candomblé e
-                    exibições de capoeira - tudo relacionado com o respeito, preservação e reverência à ancestralidade
-                    de seu povo!
-                </p>
-                <p>
-                    Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um
-                    pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas
-                    importantes, sendo conhecida, por exemplo, pelos festejos de Senhor do Bonfim, Iemanjá, Carnaval e
-                    Ano-Novo. </br>
-                </p>
-                <p>
-                    Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento
-                    da industrialização e tecnologia nomeada como uma das cidades inteligentes do nordeste por
-                    atividades do dia a colocou no primeiro lugar do Nordeste no Ranking Connected Smart Cities, que
-                    aponta as cidades mais conectadas e inteligentes do país.
+                    Procure saber sobre a disponibilidade de tomar a vacina bivalente (contra gripe e Covid-19) através
+                    do aplicativo Conecte SUS: é gratuito e disponível para todos os sistemas operacionais móveis. </br>
                 </p>
             </section>
 
         </div>
     </section>
-    <div class="sponsor">
-
-        <h2>Seja uma patrocinadora da Python Nordeste</h2>
-        <div class="patrocinio--section" id="patrocinio">
-            <section lang="pt-br" class="patrocinio-texto">
-                <h3>Junte-se a nós para construir este evento!</h3>
-                <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
 
 
-                <button>
-                    <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link">Baixar
-                        o
-                        PDF</a>
-                </button>
-            </section>
-            <section lang="en-us" class="patrocinio-texto">
-                <h3>Become a sponsor of Python Nordeste</h3>
-                <p>Check out our Sponsorship Plan!</p>
-
-                <button>
-                    <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view">Download PDF file
-                    </a>
-                </button>
-            </section>
-
-        </div>
-    </div>
-
-    <div class="localizacao">
-        <section class="localizacao--texto">
-            <h2>Confira o local do evento</h2>
-            <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) - Salvador</p>
-            <br>
-            <p>R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630</p>
-        </section>
-
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.56535363496!2d-38.512876424041686!3d-12.999628560375259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049dd45f3533%3A0x6e449a7096d9e5e0!2sEscola%20Polit%C3%A9cnica%20da%20UFBA!5e0!3m2!1spt-BR!2sbr!4v1685062528945!5m2!1spt-BR!2sbr"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
 
 
     <div class="social-media" id="social-media">
