ajustes nos links do navbar na pagina de orientações sobre a covid 19

--- a/orientacoes.html
+++ b/orientacoes.html
@@ -65,11 +65,11 @@
 <body>
 
     <div class="navbar">
-        <button><a id="logo" class="nav-link" href="#">Home</a></button>
-        <button><a class="nav-link" href="#intro">Sobre a cidade</a></button>
-        <button><a class="nav-link" href="#patrocinio">Como patrocinar</a></button>
+        <button><a id="logo" class="nav-link" href="index.html">Home</a></button>
+        <button><a class="nav-link" href="index.html#intro">Sobre a cidade</a></button>
+        <button><a class="nav-link" href="index.html#patrocinio">Como patrocinar</a></button>
         <button><a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a></button>
-        <button><a class="nav-link" href="#social-media">Redes sociais</a></button>
+        <button><a class="nav-link" href="index.html#social-media">Redes sociais</a></button>
         <button><a class="nav-link" href="orientacoes.html">Orientações para a Covid-19</a></button>
     </div>
 
