adicionado link para submissão de atv

--- a/index.html
+++ b/index.html
@@ -77,21 +77,20 @@
         <img class="main-hero" src="./img/assets/FITINHAS_VOANDO.png"
             aria-label="Fitas voando escrito Python Nordeste 2023">
         <section class="main-chamada">
-
             <img class="main-logo" src="./img/assets/LOGO.png" alt="">
             <p class="main--descricao-callout">22 a 24 de setembro de 2023
             </p>
         </section>
     </header>
-
-
+    <div class="c4p">
+        <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submeter Atividades</a>
+    </div>
     <section class="intro" id="intro">
         <div class="intro--descricao">
             <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
             <section class="intro-cidade">
                 <p class="intro-cidade--callout">A PyNE este ano será sediada em Salvador, capital e maior
                     cidade da Bahia.
-                    </hr>
                 </p>
                 <p>
                     Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas
@@ -113,12 +112,12 @@
                     da industrialização e tecnologia nomeada como uma das cidades inteligentes do Nordeste. Ficou em
                     primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas
                     e inteligentes do País.
+                </p>
             </section>
 
         </div>
     </section>
     <div class="sponsor">
-
         <h2>Seja uma patrocinadora da Python Nordeste</h2>
         <div class="patrocinio--section" id="patrocinio">
             <section lang="pt-br" class="patrocinio-texto">
