alteração no texto do btn de submissao de atv

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </section>
     </header>
     <div class="c4p">
-        <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submeter Atividades</a>
+        <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submissão de atividades</a>
     </div>
     <section class="intro" id="intro">
         <div class="intro--descricao">
