adicionando section main-chamada no header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/html">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,29 +60,27 @@
         gtag('config', 'G-L0X42JQJ9N');
     </script>
 </head>
-
 <body>
-
-    <div class="navbar">
+    <nav class="navbar">
         <button><a id="logo" class="nav-link" href="#">Home</a></button>
         <button><a class="nav-link" href="#intro">Sobre a cidade</a></button>
         <button><a class="nav-link" href="#patrocinio">Como patrocinar</a></button>
         <button><a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a></button>
         <button><a class="nav-link" href="#social-media">Redes sociais</a></button>
         <button><a class="nav-link" href="orientacoes.html">Orientações para a Covid-19</a></button>
-    </div>
-
+    </nav>
     <header class="main">
         <img class="main-hero" src="./img/assets/FITINHAS_VOANDO.png"
             aria-label="Fitas voando escrito Python Nordeste 2023">
         <section class="main-chamada">
             <img class="main-logo" src="./img/assets/LOGO.png" alt="">
-            <p class="main--descricao-callout">22 a 24 de setembro de 2023
-            </p>
+            <p class="main--descricao-callout">22 a 24 de setembro de 2023</p>
+        </section>
+        <section>
+            <div class="c4p">
+                <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submissão de atividades</a>
         </section>
     </header>
-    <div class="c4p">
-        <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submissão de atividades</a>
     </div>
     <section class="intro" id="intro">
         <div class="intro--descricao">
