Adicionando descrição de imagem na class main-logo e organizando indentações

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
         <img class="main-hero" src="./img/assets/FITINHAS_VOANDO.png"
             aria-label="Fitas voando escrito Python Nordeste 2023">
         <section class="main-chamada">
-            <img class="main-logo" src="./img/assets/LOGO.png" alt="">
+            <img class="main-logo" src="./img/assets/LOGO.png" alt="Logo Python Nordeste 2023">
             <p class="main--descricao-callout">22 a 24 de setembro de 2023</p>
         </section>
         <section>
             <div class="c4p">
                 <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submissão de atividades</a>
+            </div>    
         </section>
     </header>
-    </div>
     <section class="intro" id="intro">
         <div class="intro--descricao">
             <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
