--- a/index.html
+++ b/index.html
@@ -87,28 +87,16 @@
             <div class="intro--descricao">
                 <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
                 <section class="intro-cidade">
-                    <p class="intro-cidade--callout">A PyNE este ano será sediada em Salvador, capital e maior
-                        cidade da Bahia.
+                    <p class="intro-cidade--callout">A PyNE este ano será sediada em Salvador, capital e maior cidade da Bahia.</p>
+                    <p>
+                        Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas paisagens geográficas, e se beneficia de características muito específicas. Tem um clima quente e ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da Barra, Amaralina, e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra, como a rica e saborosa culinária, música e ritmos revolucionários, sincretismo religioso, terreiros de candomblé e
+                        exibições de capoeira - tudo relacionado com o respeito, preservação e reverência à ancestralidade de seu povo!
                     </p>
                     <p>
-                        Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas
-                        paisagens geográficas, e se beneficia de características muito específicas. Tem um clima quente e
-                        ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da Barra, Amaralina,
-                        e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra, como a rica e saborosa
-                        culinária, música e ritmos revolucionários, sincretismo religioso, terreiros de candomblé e
-                        exibições de capoeira - tudo relacionado com o respeito, preservação e reverência à ancestralidade
-                        de seu povo!
+                        Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas importantes, sendo conhecida, pelos festejos do Senhor do Bonfim, Iemanjá, Carnaval e Ano Novo.</br>
                     </p>
                     <p>
-                        Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um
-                        pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas
-                        importantes, sendo conhecida, pelos festejos do Senhor do Bonfim, Iemanjá, Carnaval e Ano Novo.
-                        </br>
-                    </p>
-                    <p>
-                        Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento
-                        da industrialização e tecnologia nomeada como uma das cidades inteligentes do Nordeste. Ficou em
-                        primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas
+                        Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento da industrialização e tecnologia nomeada como uma das cidades inteligentes do Nordeste. Ficou em primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas
                         e inteligentes do País.
                     </p>
                 </section>
@@ -121,17 +109,14 @@
                     <h3>Junte-se a nós para construir este evento!</h3>
                     <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
                     <button>
-                        <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link">Baixar
-                            o
-                            PDF</a>
+                        <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link">Baixar o PDF</a>
                     </button>
                 </section>
                 <section lang="en-us" class="patrocinio-texto">
                     <h3>Become a sponsor of Python Nordeste</h3>
                     <p>Check out our Sponsorship Plan!</p>
                     <button>
-                        <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view">Download PDF file
-                        </a>
+                        <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view">Download PDF file</a>
                     </button>
                 </section>
             </div>
@@ -149,34 +134,38 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
-
-
     <div class="social-media" id="social-media">
         <h3 class="social-media--text-center">
             Siga-nos nas nossas redes:
         </h3>
         <ul>
-            <li><a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
+            <li>
+                <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
                     <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email">
                     nordeste@python.org.br
-                </a></li>
-            <li> <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
+                </a>
+            </li>
+            <li> 
+                <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
                     <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram">@pythonnordeste
-                </a></li>
-            <li> <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
+                </a>
+            </li>
+            <li> 
+                <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
                     <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter">@pythonnordeste
-                </a> </li>
-            <li><a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
+                </a> 
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
                     rel="noopener noreferrer">
                     <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin">/PythonNordeste
-                </a></li>
+                </a>
+            </li>
         </ul>
     </div>
-
     <footer class="footer">
         <small class="footer--note">
             22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos </small>
     </footer>
 </body>
-
 </html>
