Adicionando ao footer desde a class social-media até a class footer

--- a/index.html
+++ b/index.html
@@ -134,38 +134,40 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
-    <div class="social-media" id="social-media">
-        <h3 class="social-media--text-center">
-            Siga-nos nas nossas redes:
-        </h3>
-        <ul>
-            <li>
-                <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
-                    <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email">
-                    nordeste@python.org.br
-                </a>
-            </li>
-            <li> 
-                <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
-                    <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram">@pythonnordeste
-                </a>
-            </li>
-            <li> 
-                <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
-                    <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter">@pythonnordeste
-                </a> 
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
-                    rel="noopener noreferrer">
-                    <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin">/PythonNordeste
-                </a>
-            </li>
-        </ul>
-    </div>
-    <footer class="footer">
-        <small class="footer--note">
-            22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos </small>
+    <footer>
+        <div class="social-media" id="social-media">
+            <h3 class="social-media--text-center">
+                Siga-nos nas nossas redes:
+            </h3>
+            <ul>
+                <li>
+                    <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
+                        <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email">
+                        nordeste@python.org.br
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
+                        <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram">@pythonnordeste
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
+                        <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter">@pythonnordeste
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
+                        rel="noopener noreferrer">
+                        <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin">/PythonNordeste
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <footer class="footer">
+            <small class="footer--note">
+                22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos </small>
+        </footer>
     </footer>
 </body>
 </html>
