Atualizei a class footer adicionando a tag section porque tinha uma tag footer dentro da outra.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </section>
     </header>
     <main>
-        <section class="intro" id="intro">
+        <article class="intro" id="intro">
             <div class="intro--descricao">
                 <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
                 <section class="intro-cidade">
@@ -100,9 +100,9 @@
                         e inteligentes do País.
                     </p>
                 </section>
-            </div>
-        </section>
-        <div class="sponsor">
+             </div>      
+        </article>
+        <article class="sponsor">
             <h2>Seja uma patrocinadora da Python Nordeste</h2>
             <div class="patrocinio--section" id="patrocinio">
                 <section lang="pt-br" class="patrocinio-texto">
@@ -120,8 +120,8 @@
                     </button>
                 </section>
             </div>
-        </div>
-        <div class="localizacao">
+        </article>
+        <article class="localizacao">
             <section class="localizacao--texto">
                 <h2>Confira o local do evento</h2>
                 <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) - Salvador</p>
@@ -132,7 +132,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.56535363496!2d-38.512876424041686!3d-12.999628560375259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049dd45f3533%3A0x6e449a7096d9e5e0!2sEscola%20Polit%C3%A9cnica%20da%20UFBA!5e0!3m2!1spt-BR!2sbr!4v1685062528945!5m2!1spt-BR!2sbr"
                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </article>
     </main>
     <footer>
         <div class="social-media" id="social-media">
@@ -164,10 +164,10 @@
                 </li>
             </ul>
         </div>
-        <footer class="footer">
+        <section class="footer">
             <small class="footer--note">
                 22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos </small>
-        </footer>
+        </section>
     </footer>
 </body>
 </html>
