adicionando id nas tags article. Substituindo < por &lt;

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </section>
              </div>      
         </article>
-        <article class="sponsor">
+        <article class="sponsor" id="sponsor">
             <h2>Seja uma patrocinadora da Python Nordeste</h2>
             <div class="patrocinio--section" id="patrocinio">
                 <section lang="pt-br" class="patrocinio-texto">
@@ -121,7 +121,7 @@
                 </section>
             </div>
         </article>
-        <article class="localizacao">
+        <article class="localizacao" id="localizacao">
             <section class="localizacao--texto">
                 <h2>Confira o local do evento</h2>
                 <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) - Salvador</p>
@@ -166,7 +166,8 @@
         </div>
         <section class="footer">
             <small class="footer--note">
-                22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos </small>
+                22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com &lt;3 pelos pythonistas nordestinos
+            </small>
         </section>
     </footer>
 </body>
