Adicionei o botão cronograma do evento

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
     <div class="c4p">
         <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submissão de atividades</a>
     </div>
+    <div class="c4p">
+        <a href="https://pretalx.com/python-nordeste-2023/schedule/" target="_blank" class="btn-c4p">Cronograma do evento</a>
+    </div>
     <section class="intro" id="intro">
         <div class="intro--descricao">
             <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
